fix: add fallback for viewport height on mobile (#1766)

--- a/packages/web/src/stylesheets/_main.scss
+++ b/packages/web/src/stylesheets/_main.scss
@@ -34,6 +34,8 @@
   @media screen and (max-width: 768px) {
     --sn-stylekit-font-size-editor: 1rem;
   }
+
+  --viewport-height: 100vh;
 }
 
 html {
